[tool.poetry]
name = "accountable"
version = "0.1.0"
description = ""
authors = ["Kieran Lavelle"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.2.6"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
